New SelectActivity UI, users can now see people in front of them in the queue before booking. Added appropriate tests, minor fixes.

--- a/Android Client/Clup/app/src/main/res/layout/activity_select.xml
+++ b/Android Client/Clup/app/src/main/res/layout/activity_select.xml
@@ -26,6 +26,7 @@
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/select_tab_layout"
+            style="@style/AppTheme.Clup.TabsLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="scrollable" />
