--- a/Android Client/Clup/app/src/main/res/values-night/colors.xml
+++ b/Android Client/Clup/app/src/main/res/values-night/colors.xml
@@ -32,4 +32,8 @@
     <!-- text colors -->
     <color name="error_color">#FFCF6679</color>
     <color name="error_color_alt">#FFFFCDD2</color>
+
+    <!-- timeline colors -->
+    <color name="timeline_active_marker_color">@color/lime_200</color>
+    <color name="timeline_active_line_color">@color/lime_200</color>
 </resources>
