--- a/Android Client/Clup/app/src/main/res/values-night/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night/themes.xml
@@ -154,6 +154,12 @@
         <item name="android:textStyle">normal</item>
     </style>
 
+    <style name="AppTheme.Clup.ItemTitleTextView.TimeLine" parent="">
+        <item name="android:textAlignment">textStart</item>
+        <item name="android:textSize">@dimen/item_title_text_view_text_size</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
     <style name="AppTheme.Clup.InfoTitleTextView" parent="Widget.MaterialComponents.TextView">
         <item name="android:lines">1</item>
         <item name="android:textAlignment">center</item>
@@ -276,5 +282,12 @@
 
         <item name="android:textSize">16sp</item>
         <item name="android:textStyle">bold</item>
+    </style>
+
+    <!-- TABS LAYOUT THEME -->
+    <style name="AppTheme.Clup.TabsLayout" parent="">
+        <item name="android:background">?android:colorBackground</item>
+        <item name="tabSelectedTextColor">@color/lime_200</item>
+        <item name="tabIndicatorColor">@color/lime_200</item>
     </style>
 </resources>
