--- a/Android Client/Clup/app/src/main/res/layout/fragment_select.xml
+++ b/Android Client/Clup/app/src/main/res/layout/fragment_select.xml
@@ -4,6 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
+    <!-- dummy layout that expands  below the select_card_view to allow rounded corners to be seen -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        style="@style/AppTheme.Clup.Details.ConstraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:importantForAccessibility="no"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <androidx.cardview.widget.CardView
         android:id="@+id/select_card_view"
         style="@style/AppTheme.Clup.TopRoundedCardView"
