--- a/Android Client/Clup/app/src/main/res/values-night/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,5 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-
-    <!-- BASE APPLICATION THEME -->
+    <!-- BASE APPLICATION THEMES -->
     <style name="AppTheme.Clup" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <item name="colorPrimary">@color/lime_500</item>
         <item name="colorPrimaryDark">@color/gray_900</item>
@@ -12,7 +11,19 @@
         <item name="colorOnSecondary">@color/white</item>
     </style>
 
-    <!-- MAIN ACTIVITY THEME -->
+    <!-- AUTH ACTIVITY THEMES -->
+    <style name="AppTheme.Clup.Auth" parent="AppTheme.Clup">
+        <item name="android:windowDrawsSystemBarBackgrounds">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
+
+        <item name="android:statusBarColor">?android:colorBackground</item>
+
+        <item name="android:navigationBarColor">?android:colorBackground</item>
+
+        <item name="windowActionModeOverlay">true</item>
+    </style>
+
+    <!-- MAIN ACTIVITY THEMES -->
     <style name="AppTheme.Clup.Main" parent="AppTheme.Clup">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:windowTranslucentStatus">false</item>
@@ -24,7 +35,7 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
-    <!-- MAP ACTIVITY THEME -->
+    <!-- MAP ACTIVITY THEMES -->
     <style name="AppTheme.Clup.Map" parent="AppTheme.Clup">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:windowTranslucentStatus">false</item>
@@ -43,13 +54,17 @@
 
         <item name="android:statusBarColor">?android:colorBackground</item>
 
-        <item name="android:navigationBarColor">?android:colorBackground</item>
+        <item name="android:navigationBarColor">@color/white_alpha_07</item>
 
         <item name="windowActionModeOverlay">true</item>
     </style>
 
-    <style name="AppTheme.Clup.Select.Background" parent="">
+    <style name="AppTheme.Clup.Main.Background" parent="">
         <item name="android:background">?android:colorBackground</item>
+    </style>
+
+    <style name="AppTheme.Clup.Select.Background" parent="">
+        <item name="android:background">@color/white_alpha_07</item>
     </style>
 
     <!-- DETAILS ACTIVITY THEMES -->
@@ -70,7 +85,12 @@
         <item name="android:statusBarColor">?android:colorBackground</item>
     </style>
 
-    <!-- SPLASH SCREEN THEME -->
+    <!-- INVALIDATE ACTIVITY THEMES -->
+    <style name="AppTheme.Clup.Invalidate" parent="AppTheme.Clup.Select">
+        <item name="android:navigationBarColor">?android:colorBackground</item>
+    </style>
+
+    <!-- SPLASH SCREEN THEMES -->
     <style name="AppTheme.Clup.Splash" parent="AppTheme.Clup">
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:windowTranslucentStatus">false</item>
@@ -84,7 +104,7 @@
         <item name="windowActionModeOverlay">true</item>
     </style>
 
-    <!-- TOOLBAR THEME -->
+    <!-- TOOLBAR THEMES -->
     <style name="AppTheme.Clup.SelectMaterialToolbar" parent="Widget.MaterialComponents.Toolbar">
         <item name="android:background">?android:colorBackground</item>
         <item name="titleTextColor">@color/white</item>
@@ -111,12 +131,12 @@
         <item name="android:textColor">@color/black</item>
     </style>
 
-    <!-- PAD TEXT VIEW THEME -->
+    <!-- PAD TEXT VIEW THEMES -->
     <style name="AppTheme.Clup.PadTextView" parent="Widget.MaterialComponents.TextView">
         <item name="android:background">@color/gray_900</item>
     </style>
 
-    <!-- ALERT DIALOG THEME -->
+    <!-- ALERT DIALOG THEMES -->
     <style name="AppTheme.Clup.RoundedAlertDialog" parent="Theme.MaterialComponents.DayNight.Dialog.Alert">
         <item name="colorPrimary">@color/lime_500</item>
         <item name="colorAccent">@color/lime_500</item>
@@ -243,7 +263,7 @@
         <item name="android:backgroundTint">@color/transparent</item>
     </style>
 
-    <!-- RECYCLER VIEW CONTAINER THEME -->
+    <!-- RECYCLER VIEW CONTAINER THEMES -->
     <style name="AppTheme.Clup.BottomSheetRecyclerView" parent="">
         <item name="android:background">?android:colorBackground</item>
 
@@ -253,7 +273,7 @@
         </item>
     </style>
 
-    <!-- EXTENDED FLOATING ACTION BUTTON THEME -->
+    <!-- EXTENDED FLOATING ACTION BUTTON THEMES -->
     <style name="AppTheme.Clup.ExtendedFloatingActionButton" parent="Widget.MaterialComponents.ExtendedFloatingActionButton">
         <item name="android:paddingTop">@dimen/rounded_button_vertical_padding</item>
         <item name="android:paddingBottom">@dimen/rounded_button_vertical_padding</item>
@@ -266,7 +286,7 @@
         <item name="android:textColor">@color/gray_900</item>
     </style>
 
-    <!-- FLOATING ACTION BUTTON THEME -->
+    <!-- FLOATING ACTION BUTTON THEMES -->
     <style name="AppTheme.Clup.LocationFloatingActionButton" parent="Widget.MaterialComponents.FloatingActionButton">
         <item name="backgroundTint">@color/gray_800</item>
     </style>
@@ -284,7 +304,7 @@
         <item name="android:textStyle">bold</item>
     </style>
 
-    <!-- TABS LAYOUT THEME -->
+    <!-- TABS LAYOUT THEMES -->
     <style name="AppTheme.Clup.TabsLayout" parent="">
         <item name="android:background">?android:colorBackground</item>
         <item name="tabSelectedTextColor">@color/lime_200</item>
