--- a/Android Client/Clup/app/src/debug/res/values/google_maps_api.xml
+++ b/Android Client/Clup/app/src/debug/res/values/google_maps_api.xml
@@ -1,3 +1,24 @@
 <resources>
-    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyAoOfsxd78Nulg36DUD-MIZgnSfGEfLfSE</string>
+    <!--
+    TODO: Before you run your application, you need a Google Maps API key.
+
+    To get one, follow this link, follow the directions and press "Create" at the end:
+
+    https://console.developers.google.com/flows/enableapi?apiid=maps_android_backend&keyType=CLIENT_SIDE_ANDROID&r=B2:1B:B6:CF:ED:FD:A7:B4:81:98:F5:B0:62:C5:64:2B:E5:47:46:5A%3Bcom.android.clup
+
+    You can also add your credentials to an existing key, using these values:
+
+    Package name:
+    com.android.clup
+
+    SHA-1 certificate fingerprint:
+    B2:1B:B6:CF:ED:FD:A7:B4:81:98:F5:B0:62:C5:64:2B:E5:47:46:5A
+
+    Alternatively, follow the directions here:
+    https://developers.google.com/maps/documentation/android/start#get-key
+
+    Once you have your key (it starts with "AIza"), replace the "google_maps_key"
+    string in this file.
+    -->
+    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyDedmTisfHCre2FH3r0XFOlj42r3DAtG6Y</string>
 </resources>
