--- a/Android Client/Clup/app/src/main/res/values/array.xml
+++ b/Android Client/Clup/app/src/main/res/values/array.xml
@@ -7,6 +7,7 @@
     </string-array>
 
     <string-array name="time_notices_array">
+        <item>@string/array_item_now</item>
         <item>@string/array_item_fifteen_minutes_before</item>
         <item>@string/array_item_thirty_minutes_before</item>
         <item>@string/array_item_one_hour_before</item>
