--- a/Android Client/Clup/app/src/main/res/values-night/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values-night/themes.xml
@@ -269,8 +269,7 @@
 
         <item name="behavior_hideable">false</item>
         <item name="behavior_peekHeight">@dimen/peek_height</item>
-        <item name="layout_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior
-        </item>
+        <item name="layout_behavior">@string/bottom_sheet_behavior</item>
     </style>
 
     <!-- EXTENDED FLOATING ACTION BUTTON THEMES -->
