--- a/Android Client/Clup/app/src/main/res/layout-sw600dp/activity_map.xml
+++ b/Android Client/Clup/app/src/main/res/layout-sw600dp/activity_map.xml
@@ -49,6 +49,16 @@
             app:layout_constraintStart_toEndOf="@id/map"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <ProgressBar
+            android:id="@+id/recycler_view_progress_bar"
+            style="?android:attr/progressBarStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toBottomOf="@+id/map_recycler_view"
+            app:layout_constraintEnd_toEndOf="@+id/map_recycler_view"
+            app:layout_constraintStart_toEndOf="@+id/map"
+            app:layout_constraintTop_toTopOf="@+id/map_recycler_view" />
+
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/location_button"
             style="@style/AppTheme.Clup.LocationFloatingActionButton"
