--- a/Android Client/Clup/app/src/main/res/values/themes.xml
+++ b/Android Client/Clup/app/src/main/res/values/themes.xml
@@ -349,4 +349,9 @@
         <item name="tabTextColor">@color/black_alpha_33</item>
         <item name="tabIndicatorColor">?attr/colorControlNormal</item>
     </style>
+
+    <!-- PROGRESS BAR THEMES -->
+    <style name="AppTheme.Clup.ProgressBar" parent="Widget.AppCompat.ProgressBar">
+        <item name="android:indeterminateTint">@color/lime_600</item>
+    </style>
 </resources>
