--- a/Android Client/Clup/app/src/main/res/layout-sw600dp/activity_map.xml
+++ b/Android Client/Clup/app/src/main/res/layout-sw600dp/activity_map.xml
@@ -51,7 +51,7 @@
 
         <ProgressBar
             android:id="@+id/recycler_view_progress_bar"
-            style="?android:attr/progressBarStyle"
+            style="@style/AppTheme.Clup.ProgressBar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/map_recycler_view"
